PP-490: Fix more recent handlings alert visibility.

--- a/public/themes/custom/hdbt_subtheme/src/scss/06_components/form/_issues-dropdown.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06_components/form/_issues-dropdown.scss
@@ -152,6 +152,9 @@
 .new-handlings-warning__wrapper {
   .warning-label {
     visibility: hidden;
+    &.visible {
+      visibility: visible;
+    }
   }
 
   @include breakpoint($breakpoint-l) {
